changed some texts in index.html & button font size in css

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
                         </div>
                         <h3>We'll deliver</h3>
-                        <p>Clean & tidy, your ordered car will arrive wherever you are. </p>
+                        <p>Clean & tidy, your car will arrive wherever you are. </p>
                         <div class="grey-line">
 
                         </div>
@@ -176,8 +176,9 @@
                 </div>
                 <div class="column">
                     <a href="#" class="icon-2 icon-shadow-green"><i class="far fa-address-card"></i></a>
-                    <h5>Flexible Service</h5>
-                    <p>Your car will be delivered to your address according to your preferred time.</p>
+                    <h5> <a href="#"></a>
+                        Flexible Service</h5>
+                    <p>Your car will be delivered to you according to your preferred time.</p>
                 </div>
                 <div class="column">
                     <a href="#" class="icon-2 icon-shadow-yellow"><i class="fas fa-handshake"></i></a>
@@ -280,7 +281,7 @@
 
                         </div>
                         <p> Excluded service</p>
-                        <div class="click"> <a href="#">Start with Flexible</a></div>
+                        <div class="click"> <a href="#">Start Now</a></div>
                         <a href="" class="view"> View details
                             <span class="icon">
                                 <i class="fas fa-arrow-down"></i>
@@ -299,7 +300,7 @@
                         </div>
                         <p>Create your service</p>
 
-                        <div class="click"><a href="#">Start with Personalise</a></div>
+                        <div class="click"><a href="#">Start Now</a></div>
                         <a href="#" class="view"> View details <span class="icon"><i
                                     class="fas fa-arrow-down"></i></span></a>
                     </div>
@@ -313,7 +314,7 @@
 
                         </div>
                         <p>All-inclusive service</p>
-                        <div class="click"> <a href="#">Start with All-Inclusive</a></div>
+                        <div class="click"> <a href="#">Start Now</a></div>
                         <a href="#" class="view"> View details <span class="icon"><i
                                     class="fas fa-arrow-down"></i></span></a>
                     </div>
@@ -327,7 +328,7 @@
     <section id="footer">
         <div class="container">
             <div class="top">
-                <h3>Get your car in a heart beat</h3>
+                <h3>Get your car in a heart beat.</h3>
                 <div class="start-now">
                     <a href="#">Start Now</a>
                 </div>
