--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
                                 <p class="brand">2019 Jaquar XJ</p>
                             </div>
                             <a href="#" class="model">
-                                <img src="https://i.postimg.cc/br9RmSzf/jaquar.png" alt="">
-                                <!-- <img src="img/jaquar.png" alt=""> -->
+                                <!-- <img src="https://i.postimg.cc/br9RmSzf/jaquar.png" alt=""> -->
+                                <img src="img/jaquar.png" alt="">
                             </a>
                         </box>
 
@@ -213,8 +213,8 @@
                                 <p class="brand">2019 BMW 3 Series</p>
                             </div>
                             <a href="#" class="model">
-                                <img src="https://i.postimg.cc/rskJGN29/bmw.png" alt="">
-                                <!-- <img src="img/bmw.png" alt=""> -->
+                                <!-- <img src="https://i.postimg.cc/rskJGN29/bmw.png" alt=""> -->
+                                <img src="img/bmw.png" alt="">
                             </a>
                         </box>
 
@@ -224,8 +224,8 @@
                                 <p class="brand">2019 Range Rover velar</p>
                             </div>
                             <a href="#" class="model">
-                                <img src="https://i.postimg.cc/15yBfBHm/range.png" alt="">
-                                <!-- <img src="img/range.png" alt=""> -->
+                                <!-- <img src="https://i.postimg.cc/15yBfBHm/range.png" alt=""> -->
+                                <img src="img/range.png" alt="">
                             </a>
                         </box>
 
@@ -235,8 +235,8 @@
                                 <p class="brand">2019 Mercedes S560</p>
                             </div>
                             <a href="#" class="model">
-                                <img src="https://i.postimg.cc/tR3DqwFv/benz.png" alt="">
-                                <!-- <img src="img/benz.png" alt=""> -->
+                                <!-- <img src="https://i.postimg.cc/tR3DqwFv/benz.png" alt=""> -->
+                                <img src="img/benz.png" alt="">
                             </a>
                         </box>
                     </div>
